# ezvpn

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build-apple.sh  build-ios.sh  build-windows.ps1  install.ps1  install.sh  vpn_client.toml.example  vpn_server.toml.example
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  Apple-App.md  Architecture.md  CLIENT-SPLIT-DNS.md  Client-Split-DNS.md  DESKTOP-OVERLAP-AND-NETWORK-CHANGE-PLAN.md  Desktop-Overlap-and-Network-Change-Plan.md  IOS-POC.md  RUNNING-AS-A-SERVICE.md  Windows-App.md  iOS-App.md
ios/: ezvpn.h
src/: auth.rs  control.rs  error.rs  ffi.rs  ffi_windows.rs  lib.rs  lock.rs  main.rs  runtime.rs  secret.rs
src/config/: file_config.rs  mod.rs
src/net/: device.rs  local_networks.rs  mod.rs
src/transport/: endpoint.rs  mod.rs  paths.rs
src/tunnel/: client.rs  datagram.rs  ios.rs  mod.rs  offload.rs  server.rs  signaling.rs  stream.rs
tests/: stream_over_iroh.rs
windows/: ezvpn.h
